--- a/css/style.css
+++ b/css/style.css
@@ -1,50 +1,124 @@
 :root {
-    --blanco : #fff;
-    --oscuro : #212121;
-    --gris : #757575;
-    --primario : #ffc107;
-    --secundario : #0097a7;
+  --blanco: #fff;
+  --oscuro: #212121;
+  --gris: #757575;
+  --primario: #ffc107;
+  --secundario: #0097a7;
 }
 
 html {
-font-size: 62.5%;
+  font-size: 62.5%;
+  box-sizing: border-box;
 }
 
-body{
-    font-size: 1.6rem;
-    font-family: 'Krub', sans-serif;
+*, *::before , *::after {
+    box-sizing: inherit;
 }
 
-.titulo{
-    text-align: center;
+body {
+  font-size: 1.6rem;
+  font-family: "Krub", sans-serif;
+}
+h1{
     font-size: 3.8rem;
- 
 }
 
-.titulo span{
-    font-size: 2rem;
+h2{
+    font-size: 2.8rem;
+}
+
+h3 {
+    font-size: 1.8rem;
+}
+h1,
+h2,
+h3 {
+  text-align: center;
+
+}
+
+.titulo span {
+  font-size: 2rem;
 }
 
 .contenedor {
-    width: 120rem;
-    margin: 0 auto;
+  max-width: 120rem;
+  margin: 0 auto;
 }
-.bg__nav{
-    background-color: var(--secundario);
+.bg__nav {
+  background-color: var(--secundario);
 }
 
-.navegacion__principal{
-    display: flex;
+.navegacion__principal {
+  display: flex;
+  flex-direction: column;
+}
+
+@media (min-width: 768px) {
+  .navegacion__principal {
+    flex-direction: row;
     justify-content: space-between;
+  }
 }
 .navegacion__principal a {
-    padding: 1rem;
-    color: var(--blanco);
-    text-decoration: none;
-    font-weight: 700;
+  display: block;
+  padding: 1rem;
+  color: var(--blanco);
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 2rem;
+  text-align: center;
 }
 
 .navegacion__principal a:hover {
-    color: var(--oscuro);
-     background-color: var(--primario);
+  color: var(--oscuro);
+  background-color: var(--primario);
+}
+
+
+.hero{
+    /* background-image: linear-gradient(to bottom right, red, rgba(255,0,0,0)); */
+    background-image: /* linear-gradient(to  bottom left ,rgb(0,0,0,.6), rgba(0,0,0,.6)) */url(/imagenes/hero.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 45rem;
+    /* padding: 2rem; */
+    position:relative;
+}
+
+.contenido-hero{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0,0,0, 70%);
+    color: var(--blanco);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+} 
+
+.ubicacion{
+    display: flex;
+    align-items: baseline;
+}
+
+.btn{
+    display: inline-block;
+    width: 90%;
+    text-align: center;
+    color: var(--blanco);
+    background-color: var(--secundario);
+
+    padding: 2rem 1rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    border-radius: 5px;
+    text-decoration: none;
+}
+@media (min-width: 760px){
+    .btn{
+        width: auto;
+    }
 }
