--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* Global */
 :root {
   --blanco: #fff;
   --oscuro: #212121;
@@ -11,40 +12,46 @@ html {
   box-sizing: border-box;
 }
 
-*, *::before , *::after {
-    box-sizing: inherit;
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
 }
 
 body {
   font-size: 1.6rem;
   font-family: "Krub", sans-serif;
-}
-h1{
-    font-size: 3.8rem;
-}
-
-h2{
-    font-size: 2.8rem;
-}
-
-h3 {
-    font-size: 1.8rem;
-}
-h1,
-h2,
-h3 {
-  text-align: center;
-
-}
-
-.titulo span {
-  font-size: 2rem;
+  background-image: linear-gradient(to top, #dfe9f3 0%, VAR(--blanco) 100%);
 }
 
 .contenedor {
   max-width: 120rem;
   margin: 0 auto;
 }
+/* Titulos */
+h1 {
+  font-size: 3.8rem;
+}
+
+h2 {
+  font-size: 2.8rem;
+}
+
+h3 {
+  font-size: 1.8rem;
+}
+h1,
+h2,
+h3 {
+  text-align: center;
+}
+
+.titulo span {
+  font-size: 2rem;
+}
+
+/* Navegacion */
+
 .bg__nav {
   background-color: var(--secundario);
 }
@@ -75,50 +82,114 @@ h3 {
   background-color: var(--primario);
 }
 
+/* Hero */
 
-.hero{
-    /* background-image: linear-gradient(to bottom right, red, rgba(255,0,0,0)); */
-    background-image: /* linear-gradient(to  bottom left ,rgb(0,0,0,.6), rgba(0,0,0,.6)) */url(/imagenes/hero.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    height: 45rem;
-    /* padding: 2rem; */
-    position:relative;
+.hero {
+  /* background-image: linear-gradient(to bottom right, red, rgba(255,0,0,0)); */
+  background-image: /* linear-gradient(to  bottom left ,rgb(0,0,0,.6), rgba(0,0,0,.6)) */ url(/imagenes/hero.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 45rem;
+  /* padding: 2rem; */
+  position: relative;
+  margin-bottom: 2rem;
 }
 
-.contenido-hero{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: rgb(0,0,0, 70%);
-    color: var(--blanco);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+.contenido-hero {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0, 0, 0, 70%);
+  color: var(--blanco);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.ubicacion {
+  display: flex;
+  align-items: baseline;
+}
+
+.btn {
+  display: inline-block;
+  width: 90%;
+  text-align: center;
+  color: var(--blanco);
+  background-color: var(--secundario);
+
+  padding: 2rem 1rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  border-radius: 5px;
+  text-decoration: none;
+}
+@media (min-width: 760px) {
+  .btn {
+    width: auto;
+  }
+}
+
+/* Main */
+
+.sombra {
+  -webkit-box-shadow: 2px 6px 15px -6px rgba(38, 37, 38, 0.58);
+  -moz-box-shadow: 2px 6px 15px -6px rgba(38, 37, 38, 0.58);
+  box-shadow: 2px 6px 15px -6px rgba(38, 37, 38, 0.58);
+  background-color: var(--blanco);
+  padding: 2rem;
+}
+
+/* servicios */
+
+@media (min-width: 768px) {
+  .servicios{
+    display:grid;
+    grid-template-columns: repeat(3 , 1fr);
+    column-gap: 1rem;
+    align-content: center;
+  }
+}
+
+.servicio{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.servicio h3 {
+  font-weight: 400;
+}
+
+.iconos {
+  height: 15rem;
+  width: 15rem;
+  border-radius: 50%;
+  background-color: var(--primario);
+
+  /* alinear elmentos */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.servicio-description  p {
+  line-height: 1.5;
+  width: 25ch;
+  text-align: center;
 } 
 
-.ubicacion{
-    display: flex;
-    align-items: baseline;
+/* Formulario */
+
+.formulario{
+  background-color: var(--gris);
+  width: min(60rem , 100%);
+  margin: 0 auto;
+  padding: 2rem;
 }
 
-.btn{
-    display: inline-block;
-    width: 90%;
-    text-align: center;
-    color: var(--blanco);
-    background-color: var(--secundario);
-
-    padding: 2rem 1rem;
-    font-weight: 700;
-    text-transform: uppercase;
-    border-radius: 5px;
-    text-decoration: none;
-}
-@media (min-width: 760px){
-    .btn{
-        width: auto;
-    }
+form fieldset {
+  border: none
 }
